purple to yellow

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
 }
 body {
   /*background-color: #303030;*/
-  background-color: #800080;
+  background-color: #ffff00;
   /* #131313;*/
   font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-size: 18px;
