--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,7 @@
-<!-- Script -->
-<!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
 
-<footer class="">
-
-	<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 cv-footer">
-	  © 2014 {{ site.title }}. Siteweb content is private but layout and design is <a href="{{https://github.com/leoderbois/leoderbois.github.io}}" target="_blank">open source on my github</a> made by <a href="ttps://github.com/leoderbois">@leoderbois</a>.
-	</div>
-
+<!-- 
+Please, keep Léo Derbois's name on your fork site. That's can help me in my futur to find job :) 
+-->
+<footer class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+	  © 2014 {{ site.name }}. No right reserved. Base on <a href="https://github.com/leoderbois/Boba-Fett-Theme-For-Jekyll" target="_blank">Theme</a> made by <a href="http://www.leoderbois.com">Léo Derbois</a>.
 </footer>
