--- a/_less/main.less
+++ b/_less/main.less
@@ -1,29 +1,27 @@
 @import "bootstrapVariables.less";
 @import "theme.less";
 
+/* ####### GENERAL ####### */
+
 html {
   height: 100%;
   width: 100%;
   overflow: hidden;
 }
-
 body {
-	/*background-color: #303030;*/
-	background-color: @background-color;/* #131313;*/
-	font-family:'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-	font-size: 18px;
+	background-color: @panel-filter-and-background-color;
+	font-family: @font-global;
   	height: 100%;
   	width: 100%;
   	overflow: auto;
 }
 body a{
-	color: #BB5A2D;
+	color: @link-color;
 }
 body a:hover{
-	color: #C72B24;
+	color: @link-color-hover;
 	text-decoration: none;
 }
-
 table{
 	margin-left:auto; 
     margin-right:auto;
@@ -35,14 +33,7 @@ td img, th img{
 .colonne{
 	padding: 0;
 }
-.fast-anim{
-	transition : all 600ms ;
-	/*browser specific versions*/
-	-moz-transition : all 600ms ;
-	-ms-transition : all 600ms ;
-	-webkit-transition : all 600ms ;
-	-o-transition : all 600ms ;
-}
+
 
 .italique{
 	font-style : italic;
@@ -50,68 +41,53 @@ td img, th img{
 .bold{
 	font-style: bold;
 }
-.twitter-color a:hover{
-	color: #4099FF;
-}
 
-.mail-color a:hover{
-	color: red;
-}
-
-.linkedin-color a:hover{
-	color: #4875B4;
-}
-
-.github-color a:hover{
-	color: #FEA43A;
-}
-/*###### MENU ######*/
+/*###### PANEL ######*/
 
 
-#cv-menu{
-
-	color: white;
+#panel{
+	color: @panel-text-color;
 	height: 100%;
 	z-index: 9999;
-}
-.cv-menu-background-image {
-/*  
-	height: 100%;
+	@media(min-width: @screen-sm-min){
 		position: fixed;
+		left: 0;
+  		right: 0;
+		width: 25%;
+	}
+}
+
+#panel a{
+	color: @panel-link-color;
+}
+#panel a:hover{
+	color: @panel-link-color-hover;
+}
+.panel-background-image {
+	height: 100%;
+	position: fixed;
   	display: block;
-	width: 25%;*/
-
-	display: none;
-
-
+	width: 25%;
+  	left: 0;
+  	right: 0;
+  	z-index: 1;
+	-webkit-filter: blur(@panel-bg-blur);
+  	-moz-filter: blur(@panel-bg-blur);
+  	-o-filter: blur(@panel-bg-blur);
+  	-ms-filter: blur(@panel-bg-blur);
+  	filter: blur(@panel-bg-blur);	
+  	opacity: @panel-bg-opacity;
+	@media(max-width: @screen-sm-min){
+		display: none;
+	}
 }
 
-.cv-menu a{
-	transition : all 300ms ease-in-out;
-	/*browser specific versions*/
-	-moz-transition : all 300ms ease-in-out;
-	-ms-transition : all 300ms ease-in-out;
-	-webkit-transition : all 300ms ease-in-out;
-	-o-transition : all 300ms ease-in-out;
-}
-.cv-menu a:hover{
-/*	color: #BB5A2D;
-*/
-	transform : transition(-5Opx,0px);
-	/*browser specific versions*/
-	-moz-transform : transition(-5Opx,0px);
-	-ms-transform : transition(-5Opx,0px);
-	-webkit-transform : transition(-5Opx,0px);
-	-o-transform : transition(-5Opx,0px);
-	
-}
 
-.profile_photo{
-	background-image: url(../images/profile_photo.jpg);
+.panel_avatar{
 	background-repeat: no-repeat;
-	background-size: 180px 180px;
-	height: 180px;
-	width:180px;
+	background-size: @panel-avatar-size @panel-avatar-size;
+	height: @panel-avatar-size;
+	width:@panel-avatar-size;
 	margin-top: 50px;
 	/*margin-bottom: 60px;*/
 	margin-right: auto;
@@ -120,88 +96,87 @@ td img, th img{
 	border-radius: 100%;
 	border-radius: 4px solid #e5e5e5;
 }
-a:hover.profile_photo{
-	background-position: center;
+a img.panel_avatar{
+		transition : all 600ms ;
+	/*browser specific versions*/
+	-moz-transition : all 600ms ;
+	-ms-transition : all 600ms ;
+	-webkit-transition : all 600ms ;
+	-o-transition : all 600ms ;
+}
+a:hover img.panel_avatar{
 	transform:  scale(1.1);
 	-webkit-transform:  scale(1.1);
 	-moz-transform:  scale(1.1);
 	-o-transform:  scale(1.1);
 	-ms-transform:  scale(1.1);
-	background-color: white;
-	background-image: url(images/profile_photo_osxbricks.png);
-	background-size: 150px 150px;
-
-
 }
 
 
-.cv-menu-title{
+.panel-name{
 	text-align: center;
 	margin-top: 20px;
-	font-size: 32px;
+	font-size: @panel-name-size;
 }
-.cv-menu-social{
+.panel-social{
 	padding: 0px;
 	width: 100%;
 	text-align: center;
-	font-size: 25px;
+	font-size: @panel-socialicon-size;
 
 }
-.cv-menu-social li {
+.panel-social li {
 	display: inline-block;
 	margin: 2.5px;
 	list-style: none;
 }
 
-.cv-menu-description{
+.panel-summary{
 	text-align: center;
-	font-size: 18px;
-	font-family:'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-	color :#9A9A9A;
-	margin-bottom: 40px;
+	font-size: @panel-summary-size;
+	color :@panel-summary-color;
+	margin-bottom: 30px;
 
 }
 
-ul.cv-menu-nav{
+ul.panel-nav{
 	margin-top: 20px;
-/*	width: 22%;
-*/	text-align: right;
-
-
+	text-align: right;
+	@media(max-width: @screen-sm-min){
+		display: none;
+	}
 }
-.cv-menu-nav li{
+.panel-nav li{
 	list-style-type: none;
-	margin: 8px;
+	margin-bottom: @panel-nav-text-marginbtm-size;
 	margin-top: 0px;
 	font-weight: 300;
-	font-size: 24px;
+	font-size: @panel-nav-text-size;
 	margin-right: 12px;
 }
 
-.cv-menu-nav li:hover{
-	text-decoration: none;
-	font-size: 26px;
-		font-size: 30px;
-
+.panel-nav li:hover{
+text-decoration: none;
+	font-size: @panel-nav-text-size-hover;
 }
 
 /*####### Content #######*/
-
-.cv-content-quote{
-	font-family:'HelveticaNeue-Light', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+#content{
+	padding: 20px 10px 20px 60px;
+	color: @content-text-color;
+	background-color: @content-background-color;
+}
+.content-quote{
 	width: 100%;
 	text-align: justify;
 	font-weight: 300;
 	font-size: 16px;
-	color: #9A9A9A;
+	color: @content-quote-color;
 	padding : 40px;
+
 	
 }
-.cv-content{
-	padding: 20px 10px 20px 60px;
-	color: black;
-	background-color: white;
-}
+
 h2{
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -226,11 +201,14 @@ h2{
 	font-weight:bold;
 }
 
-.skills_section  ul,.skills_section li { list-style-type: none;
-        list-style-position:inside;
-        margin:0;
-        padding:0; }
-.cv-content-posts{
+.skills_section  ul,.skills_section li { 
+	list-style-type: none;
+    list-style-position:inside;
+    margin:0;
+    padding:0; 
+ }
+
+.content-posts{
 	padding: 30px;
 	/*border-top: 1px solid #e5e5e5;*/
 	margin-bottom: 10px;
@@ -246,51 +224,36 @@ h2{
 
 }
 
-.cv-content-posts  time {
+.content-posts  time {
 	text-align: right;
   	font-size: 15px;
   	color: #818181;
+  	@media(max-width: 1200px){
+		text-align: left;
+	}
 }
-.cv-content-posts city{
+
+.content-posts city{
 
   	font-size: 15px;
   	color: #818181;
 }
 
-.cv-content-list ul li{
+.content-list ul li{
 	list-style-type: none;
 	margin-bottom: 10px;
 }
-.cv-content-list ul li i{
+.content-list ul li i{
 	color: black;
 }
 
-.progress div.color1{
-	background-color: #E46B30;
-}
-
-.progress div.color2{
-	background-color: #E46B31;
-}
-
-.progress .color3{
-	
-}
-.progress div{ 
-/*	text-align: left;
-*/
-/*	background-color: green;
-*/}
-.progress div span{
-/*	margin-left: 10px;
-*/}
-.cv-content-contact-minor li {
+.content-contact-minor li {
 	color: #585858;
 	font-size: 14px;
 
 
 }
-.cv-content-download-button{
+.content-download-button{
 	margin-top: 50px;
 	padding: 10px;
 	width: 300px;
@@ -302,74 +265,20 @@ h2{
 	text-align: center;
 
 }
-/* footer */
-.cv-footer{
-	font-family:'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-
+/* ##### footer ##### */
+footer{
 	text-align: center;
-	clear: both;
-	background-color: black;
-	opacity: 1;
-	z-index: 9999;
-	width: 100%;
-	padding: 5px;
-	font-size: 12px;
-	line-height: 14px;
-	color: #9b9b9b;
+	background-color: @footer-background-color;
+	color: @footer-text-color;
+}
+footer a{
+	color: @footer-link-color;
+}
+footer a:hover{
+	color: @footer-link-hover-color;
 }
 
 
-/* responsive */
-@media(max-width: 1200px){
 
-	.cv-content-posts  time {
-		text-align: left;
-	}
-
-	@media(max-width: @screen-sm-min){/*@screen-lg-min*/
-		ul.cv-menu-nav{
-			display: none;
-		}
-
-	}
-}
-@media(min-width: @screen-sm-min){
-	#cv-menu{
-		position: fixed;
-		left: 0;
-  		right: 0;
-		width: 25%;
-	}
-	.cv-menu-background-image {
-		height: 100%;
-		position: fixed;
-  		display: block;
-		width: 25%;
-  		left: 0;
-  		right: 0;
-  		z-index: 1;
-		background-image: url(../images/left-wallpaper-little.jpg);
-		-webkit-filter: blur(5px);
-  		-moz-filter: blur(5px);
-  		-o-filter: blur(5px);
-  		-ms-filter: blur(5px);
-  		filter: blur(5px);	
-  		opacity: 0.2;
-	}
-
-}
-
-
-/* Flags */
-
-.flag {
-	width: 16px;
-	height: 11px;
-	background:url(images/flags.png) no-repeat
-}
-
-.flag.flag-es {background-position: -16px 0}
-.flag.flag-fr {background-position: 0 -11px}
-.flag.flag-gb {background-position: -16px -11px}
 
 
