--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -20,7 +20,7 @@
     <div class="panel-summary">{{ site.summary }}</div>
     <ul class="panel-nav">
       {% if site.categories.experiences %}<li><a href="#experiences">Experiences</a></li>{% endif %}
-      {% if site.categories.projects %}<li><a href="#projets"> Projects</a></li>{% endif %}
+      {% if site.categories.projects %}<li><a href="#projects"> Projects</a></li>{% endif %}
       {% if site.categories.skills %}<li><a href="#skills">Skills</a></li>{% endif %}
       {% if site.categories.educations %}<li><a href="#educations">Education</a></li>{% endif %}
       {% if site.categories.hobbies %}<li><a href="#hobbies">Hobbies</a></li>{% endif %}
