Informations HTML Template

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,13 +6,13 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-    <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="{{ site.favicon }}" rel="shortcut icon" type="image/x-icon">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
 
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/bobafett.css" | prepend: site.baseurl }}">
  
 <!-- Google Analytics -->
     <script>
