--- a/_includes/content/4-skills.html
+++ b/_includes/content/4-skills.html
@@ -1,10 +1,36 @@
-<html>
-  <head>
-    <title>Pages Title</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body >
+<h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="skills"><i class="fa fa-database"></i> Skills</h2>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 skills_section cv-content-posts cv-content-line">
+    <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12">Languages</h3>
+    <div class="col-lg-4 col-md-6  col-sm-12 col-xs-12">
+      <h4><i class="fa fa-wrench"></i> Compiled</h4>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+      <h4><i class="fa fa-terminal"></i> Scripted</h4>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+      <h4><i class="fa fa-globe"></i> Web And Database</h4>
+    </div>
 
 
-  </body>
-</html>
+    <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12">Process</h3>
+    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+      <h4><i class="fa fa-tasks"></i> Project Management</h4>
+      <ul>
+        <li>AGILE Method (SCRUM)</li>
+        <li>Git</li>
+        <li>Subversion </li>
+      </ul>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+      <h4><i class="fa fa-cubes"></i> Methodologies</h4>
+      <ul>
+        <li>AGILE Method (SCRUM)</li>
+        <li>Git</li>
+        <li>Subversion </li>
+      </ul>
+    </div>
+
+
+
+    </div>
+  </div>
