--- a/_includes/content/6-hobbies.html
+++ b/_includes/content/6-hobbies.html
@@ -1,10 +1,16 @@
-<html>
-  <head>
-    <title>Pages Title</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body >
-
-
-  </body>
-</html>
+  <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="hobbies"><i class="fa fa-coffee"></i> Hobbies</h2>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cv-content-posts 
+cv-content-list">
+    <ul class="col-lg-4 col-md-6 col-lg-6 col-sm-12 col-xs-12 ">
+      <li><i class="fa fa-dot-circle-o"></i> Technology watch</li>
+      <li><i class="fa fa-dot-circle-o"></i> Improve and write articles for <a href="http://www.osxbricks.com">OSXBricks.com</a></li>
+      <li><i class="fa fa-dot-circle-o"></i> Create tools for Mac (little apps, <a href="http://www.osxbricks.com/category/alfred/">Alfred Workflow</a>) </li>
+    </ul>
+    <ul class="col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
+      <li><i class="fa fa-dot-circle-o"></i> Motorcycles : drive and mecanics</li>
+      <li><i class="fa fa-dot-circle-o"></i> Nature : stroll and discover places</li>
+    </ul>
+    <ul class="col-lg-4 col-md-12 col-sm-12 col-xs-12 ">
+      <li><i class="fa fa-dot-circle-o"></i> Music : play drums for 15 years</li>
+    </ul>
+  </div>
