--- a/_less/theme.less
+++ b/_less/theme.less
@@ -48,7 +48,10 @@
 
 
 /* --> sizes */
-
+@content-quote-font-size          : 16px;
+@content-section-title-size       : 30px;
+@content-post-title-font-size     : 22px;
+@content-post-typelist-font-size  : 18px; /* Post font size where is type is list (like hobbies, skills or informations)*/
 
 /* ######## FOOTER ######### */
 @footer-background-color          :black;
