--- a/_includes/content/3-projects.html
+++ b/_includes/content/3-projects.html
@@ -1,4 +1,4 @@
-<h2 id="projects"><i class="fa fa-wrench"></i> Projects</h2>
+<h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="projects"><i class="fa fa-wrench"></i> Projects</h2>
 <div class="content-posts content-line">
   {% for post in site.categories.projects %}
   <li>
