--- a/_includes/content/6-hobbies.html
+++ b/_includes/content/6-hobbies.html
@@ -1,7 +1,9 @@
-  <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="hobbies"><i class="fa fa-coffee"></i> Hobbies</h2>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cv-content-posts 
-cv-content-list">
-    <ul class="col-lg-4 col-md-6 col-lg-6 col-sm-12 col-xs-12 ">
+ <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="hobbies"><i class="fa fa-coffee"></i> Hobbies</h2>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-posts 
+content-list">
+
+
+  <!--  <ul class="col-lg-4 col-md-6 col-lg-6 col-sm-12 col-xs-12 ">
       <li><i class="fa fa-dot-circle-o"></i> Technology watch</li>
       <li><i class="fa fa-dot-circle-o"></i> Improve and write articles for <a href="http://www.osxbricks.com">OSXBricks.com</a></li>
       <li><i class="fa fa-dot-circle-o"></i> Create tools for Mac (little apps, <a href="http://www.osxbricks.com/category/alfred/">Alfred Workflow</a>) </li>
@@ -13,4 +15,21 @@ cv-content-list">
     <ul class="col-lg-4 col-md-12 col-sm-12 col-xs-12 ">
       <li><i class="fa fa-dot-circle-o"></i> Music : play drums for 15 years</li>
     </ul>
-  </div>
+  </div> -->
+
+
+  {% if site.hobbies %}
+    <ul>
+    {% for hobby in site.hobbies %}
+        <li class="col-lg-4 col-md-6 col-sm-12 col-xs-12"><i class="fa fa-dot-circle-o"></i> {{ hobby }}</li>
+    {% endfor %}
+    </ul>
+  {% else %}
+    {% for post in site.categories.skills %}
+    <li>
+      <h3 class="post-title  col-lg-12 col-md-12 col-sm-12 col-xs-12 "><i class="fa fa-chevron-right"></i> {{ post.title }}</h3>
+      <div class="post-content col-md-12 col-lg-12 col-sm-12 col-xs-12">{{ post.content }}</div>
+    </li>
+    {% endfor %}
+  {% endif %}
+</div>
