--- a/_includes/content/4-skills.html
+++ b/_includes/content/4-skills.html
@@ -1,4 +1,5 @@
-<h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="skills"><i class="fa fa-database"></i> Skills</h2>
+<section id="skills">
+<h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-database"></i> Skills</h2>
 <div class="content-posts content-line">
 
   {% if site.skills %}
@@ -21,3 +22,4 @@
     {% endfor %}
   {% endif %}
 </div>
+</section>
