--- a/_includes/content/5-educations.html
+++ b/_includes/content/5-educations.html
@@ -1,5 +1,5 @@
-
-<h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="educations"><i class="fa fa-university"></i> Education</h2>
+<section id="educations">
+<h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-university"></i> Education</h2>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-posts content-line">
      {% for post in site.categories.educations %}
       <li>
@@ -17,3 +17,4 @@
 
 
   </div>
+</section>
