--- a/_includes/content/6-hobbies.html
+++ b/_includes/content/6-hobbies.html
@@ -1,4 +1,5 @@
- <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="hobbies"><i class="fa fa-coffee"></i> Hobbies</h2>
+<section id="hobbies">
+ <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ><i class="fa fa-coffee"></i> Hobbies</h2>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-posts 
 content-list">
 
@@ -25,7 +26,7 @@ content-list">
     {% endfor %}
     </ul>
   {% else %}
-    {% for post in site.categories.skills %}
+    {% for post in site.categories.hobbies %}
     <li>
       <h3 class="post-title  col-lg-12 col-md-12 col-sm-12 col-xs-12 "><i class="fa fa-chevron-right"></i> {{ post.title }}</h3>
       <div class="post-content col-md-12 col-lg-12 col-sm-12 col-xs-12">{{ post.content }}</div>
@@ -33,3 +34,4 @@ content-list">
     {% endfor %}
   {% endif %}
 </div>
+</section>
