--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
 
-    <link rel="stylesheet" href="{{ "/css/bobafett.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
  
 <!-- Google Analytics -->
     <script>
