--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,30 @@
-/* ########## GENRAL ######## */
-/* General */
+@import url(http://twitter.github.com/bootstrap/assets/css/bootstrap.css);
+/*#######################*/
+/*#       IMPORT        #*/
+/*#######################*/
+/*#######################*/
+/*#       GENERAL       #*/
+/*#######################*/
 /* -- >links */
 /* --> Fonts */
-/* ######## PANEL ######### */
+/*#######################*/
+/*#        PANEL        #*/
+/*#######################*/
 /* --> Colors */
 /* --> background */
 /* --> sizes */
-/* ######## CONTENT ######### */
+/*#######################*/
+/*#       CONTENT       #*/
+/*#######################*/
 /* --> Colors */
 /* --> sizes */
 /* Post font size where is type is list (like hobbies, skills or informations)*/
-/* ######## FOOTER ######### */
-/* ####### GENERAL ####### */
+/*#######################*/
+/*#        FOOTER       #*/
+/*#######################*/
+/*#######################*/
+/*#       GENERAL       #*/
+/*#######################*/
 html {
   height: 100%;
   width: 100%;
@@ -23,6 +36,7 @@ body {
   height: 100%;
   width: 100%;
   overflow: auto;
+  position: relative;
 }
 body a {
   color: #73181e;
@@ -49,7 +63,9 @@ th img {
 .bold {
   font-style: bold;
 }
-/*###### PANEL ######*/
+/*#######################*/
+/*#        PANEL        #*/
+/*#######################*/
 #panel {
   color: #ffffff;
   height: 100%;
@@ -84,18 +100,12 @@ th img {
   filter: blur(5px);
   opacity: 0.5;
 }
-@media (max-width: 768px) {
-  .panel-background-image {
-    display: none;
-  }
-}
 .panel_avatar {
   background-repeat: no-repeat;
   background-size: 180px 180px;
   height: 180px;
   width: 180px;
   margin-top: 50px;
-  /*margin-bottom: 60px;*/
   margin-right: auto;
   margin-left: auto;
   display: block;
@@ -139,16 +149,11 @@ a:hover img.panel_avatar {
   color: #dd8837;
   margin-bottom: 30px;
 }
-ul.panel-nav {
+#navbar ul {
   margin-top: 20px;
   text-align: right;
 }
-@media (max-width: 768px) {
-  ul.panel-nav {
-    display: none;
-  }
-}
-.panel-nav li {
+#navbar ul li {
   list-style-type: none;
   margin-bottom: 8px;
   margin-top: 0px;
@@ -156,15 +161,42 @@ ul.panel-nav {
   font-size: 24px;
   margin-right: 12px;
 }
-.panel-nav li:hover {
+#navbar li.active {
+  color: yellow;
+  border: 1px solid red;
+}
+#navbar ul li:hover {
   text-decoration: none;
   font-size: 30px;
 }
-/*####### Content #######*/
+#navbar .active a {
+  color: yellow;
+  background-color: green;
+}
+/*#######################*/
+/*#       CONTENT       #*/
+/*#######################*/
 #content {
   padding: 20px 10px 20px 60px;
   color: #000000;
   background-color: #ffffff;
+}
+#content a {
+  color: #73181e;
+}
+#content a:hover {
+  color: #f7a641;
+}
+#content h2 {
+  font-size: 30px;
+  padding-top: 10px;
+  color: #000000;
+  padding-bottom: 10px;
+  font-style: bold;
+  border-bottom: 1px solid #e5e5e5;
+}
+#content h2 i {
+  color: #000000;
 }
 .content-quote {
   width: 100%;
@@ -174,12 +206,8 @@ ul.panel-nav {
   color: #333333;
   padding: 40px;
 }
-h2 {
-  font-size: 30px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  font-style: bold;
-  border-bottom: 1px solid #e5e5e5;
+.content-posts i {
+  color: #000000;
 }
 .content-skills {
   margin: 1px;
@@ -196,7 +224,6 @@ h2 {
 }
 .content-posts {
   padding: 30px;
-  /*border-top: 1px solid #e5e5e5;*/
   margin-bottom: 10px;
   list-style-type: none;
 }
@@ -206,6 +233,7 @@ h2 {
 }
 .post-title {
   font-size: 22px;
+  color: #000000;
 }
 .content-posts time {
   text-align: right;
@@ -226,25 +254,28 @@ h2 {
   margin-bottom: 10px;
   font-size: 18px;
 }
-.content-list ul li i {
-  color: black;
-}
 .content-contact-minor li {
   color: #585858;
   font-size: 14px;
 }
-.content-download-button {
+a.content-download-button {
   margin-top: 50px;
   padding: 10px;
   width: 300px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  background-color: black;
+  background-color: #000000;
   border-radius: 5px;
   text-align: center;
+  font-size: 14px;
 }
-/* ##### footer ##### */
+a:hover.content-download-button {
+  background-color: #000000;
+}
+/*#######################*/
+/*#        FOOTER       #*/
+/*#######################*/
 footer {
   text-align: center;
   background-color: #000000;
