Updates fake informations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,9 @@ Please, keep Léo Derbois's name on your fork site. That's can help me in my fut
 -->
 
 <footer class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-	  © 2014 {{ site.name }}. No right reserved. Base on <a href="https://github.com/leoderbois/Boba-Fett-Theme-For-Jekyll" target="_blank">Theme</a> made by <a href="http://www.leoderbois.com">Léo Derbois</a>.
+	  © 2014 {{ site.name }}. Based on a <a href="https://github.com/leoderbois/Boba-Fett-Theme-For-Jekyll" target="_blank">theme</a> made by <a href="http://www.leoderbois.com">Léo Derbois</a>.
 </footer>
    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<!--    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
