--- a/_less/main.less
+++ b/_less/main.less
@@ -171,6 +171,12 @@ a:hover img.panel_avatar{
 #content a:hover{
 	color : @content-link-color-hover;
 }
+
+#content img{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
 #content h2{
 	font-size: @content-section-title-size;
 	padding-top: 10px;
@@ -189,12 +195,16 @@ a:hover img.panel_avatar{
 	font-size: @content-quote-font-size;
 	color: @content-quote-color;
 	padding : 40px;
+		font-style : italic;
+
+
 }
 .content-posts i{
 	color: @content-post-icon-color;
 }
 .content-skills {
-	margin:1px;
+	padding:0;
+
 	text-align: center;
 }
 .content-skills ul,.content-skills li{
