--- a/_includes/content/4-skills.html
+++ b/_includes/content/4-skills.html
@@ -1,5 +1,5 @@
-<section id="skills">
-<h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-database"></i> Skills</h2>
+<section >
+<h2 id="skills" class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-database"></i> Skills</h2>
 <div class="content-posts content-line">
 
   {% if site.skills %}
