--- a/_includes/content/7-informations.html
+++ b/_includes/content/7-informations.html
@@ -1,5 +1,5 @@
-  <section  id="informations">
-  <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-info"></i> Informations</h2>
+  <section  >
+  <h2 id="informations" class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-info"></i> Informations</h2>
 
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-posts  
 content-list">
@@ -22,8 +22,8 @@ content-list">
     <ul >
       {% if site.linkedin %}<li><a href="http://fr.linkedin.com/in/{{site.linkedin}}" target="_blank"><i class="fa fa-linkedin" target="_blank"></i> {{site.name}}</a></li>{% endif %}
       {% if site.google %}<li><a href="https://plus.google.com/+{{site.google}}" target="_blank"><i class="fa fa-google-plus"></i> {{site.name}}</a></li>{% endif %}
-      {% if site.github %}<li><a href="https://github.com/{{site.github}}" target="_blank"><i class="fa fa-github" ></i></a> {{site.github}}</li>{% endif %}
-      {% if site.twitter %}<li><a href="http://www.twitter.com/{{site.twitter}}" target="_blank"><i class="fa fa-twitter"></i></a> @{{site.twitter}}</li>{% endif %}
+      {% if site.github %}<li><a href="https://github.com/{{site.github}}" target="_blank"><i class="fa fa-github" ></i> {{site.github}}</a></li>{% endif %}
+      {% if site.twitter %}<li><a href="http://www.twitter.com/{{site.twitter}}" target="_blank"><i class="fa fa-twitter"></i> @{{site.twitter}}</a></li>{% endif %}
       {% if site.facebook %}<li><a href="https://www.facebook.com/{{site.facebok}}" target="_blank"><i class="fa fa-facebook"></i> {{site.facebook}}</a></li>{% endif %}
     </ul>
     </div>
