--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    <meta name="description" content="{{site.description}}" />
+    <meta name="keywords" content="{{site.metadata | join: ','}}" />
+
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
