--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -15,17 +15,17 @@
       {% if site.google %}<li><a href="https://plus.google.com/+{{site.google}}" target="_blank"><i class="fa fa-google-plus-square"></i></a></li>{% endif %}
       {% if site.github %}<li><a href="https://github.com/{{site.github}}" target="_blank"><i class="fa fa-github-square" ></i></a></li>{% endif %}
       {% if site.twitter %}<li><a href="http://www.twitter.com/{{site.twitter}}" target="_blank"><i class="fa fa-twitter-square"></i></a></li>{% endif %}
-      {% if site.facebook %}<li><a href="https://www.facebook.com/{{site.facebok}}" target="_blank"><i class="fa fa-facebook-square"></i></a></li>{% endif %}
+      {% if site.facebook %}<li><a href="https://www.facebook.com/{{site.facebook}}" target="_blank"><i class="fa fa-facebook-square"></i></a></li>{% endif %}
     </ul>
     <div class="panel-summary">{{ site.summary }}</div>
-    <nav id="navbar" class="nav" role="navigation">
-      <ul  >
+    <nav id="navbar" class="nav hidden-xs" role="navigation">
+      <ul>
         {% if site.categories.experiences %}<li ><a href="#experiences">Experiences</a></li>{% endif %}
         {% if site.categories.projects %}<li><a href="#projects"> Projects</a></li>{% endif %}
         {% if site.categories.skills or site.skills %}<li><a href="#skills">Skills</a></li>{% endif %}
         {% if site.categories.educations %}<li><a href="#educations">Education</a></li>{% endif %}
         {% if site.categories.hobbies or site.hobbies %}<li><a href="#hobbies">Hobbies</a></li>{% endif %}
-        <li><a href="#informations" class="scrollTo">Informations</a></li>
+        <li><a href="#informations" >Informations</a></li>
       </ul>
     </nav>
   </div> 
