--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ a:hover img.panel_avatar {
   padding: 0px;
   width: 100%;
   text-align: center;
-  font-size: 25px;
+  font-size: 40px;
 }
 .panel-social li {
   display: inline-block;
@@ -167,7 +167,7 @@ a:hover img.panel_avatar {
 }
 #navbar ul li:hover {
   text-decoration: none;
-  font-size: 30px;
+  font-size: 26px;
 }
 #navbar .active a {
   color: yellow;
@@ -187,6 +187,11 @@ a:hover img.panel_avatar {
 #content a:hover {
   color: #f7a641;
 }
+#content img {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
 #content h2 {
   font-size: 30px;
   padding-top: 10px;
@@ -202,15 +207,16 @@ a:hover img.panel_avatar {
   width: 100%;
   text-align: justify;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 20px;
   color: #333333;
   padding: 40px;
+  font-style: italic;
 }
 .content-posts i {
   color: #000000;
 }
 .content-skills {
-  margin: 1px;
+  padding: 0;
   text-align: center;
 }
 .content-skills ul,
