--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-    <link href="{{ site.favicon }}" rel="shortcut icon" type="image/x-icon">
+    <link href="{{ site.url }}{{ site.favicon }}" rel="shortcut icon" type="image/x-icon">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
