--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -4,11 +4,11 @@
   <div id="panel" > 
     {% if site.avatar %}
       {% if site.blog_url %}<a target="_blank" href="{{ site.blog_url }}">{% endif %}
-      <img src="{{ site.avatar }}" class="panel_avatar"/>
+      <img src="{{ site.url }}{{ site.avatar }}" class="panel_avatar"/>
       {% if site.blog_url %}</a>{% endif %}
     {% endif %}
 
-    <h1 class="panel-name">{{ site.name }}</h1>
+    <h1 class="panel-name">{{ site.baseurl }}</h1>
     <ul class="panel-social">
       {% if site.email %}<li><a href="mailto:{{ site.email }}"><i class="fa fa-envelope-square"></i></a></li>{% endif %}
       {% if site.linkedin %}<li><a href="http://fr.linkedin.com/in/{{site.linkedin}}" target="_blank"><i class="fa fa-linkedin-square" target="_blank"></i></a></li>{% endif %}
@@ -29,6 +29,6 @@
       </ul>
     </nav>
   </div> 
-  <img src="{{ site.panel_background }}" class="panel-background-image hidden-xs" ></img>
+  <img src="{{ site.url }}{{ site.panel_background }}" class="panel-background-image hidden-xs" ></img>
 
 </div>
