Update UI + README + LICENSE

--- a/_less/colors.less
+++ b/_less/colors.less
@@ -1,5 +1,8 @@
-@oil        : #333;
-@boba-red   : #73181E;
-@boba-orange: #F7A641;
-@boba-green : #183128;
-@boba-gold  : #DD8837;
+@oil             : #333;
+@boba-red        : #73181E;
+@boba-red-light  : #A62A2C;
+@boba-orange     : #F7A641;
+@boba-green      : #0C710F;
+@boba-green-light: #1D9722;
+@boba-red-light-o: #B12F34;
+@boba-gold       : #DD8837;
