--- a/_less/bobafett.less
+++ b/_less/bobafett.less
@@ -37,7 +37,7 @@
 @panel-nav-text-size-hover        : @panel-nav-text-size;
 @panel-nav-text-marginbtm-size    : 8px;
 @panel-avatar-size                : 180px;
-@content-nav-height-to-remove	  : 800; // @screen-sm-min + ~30
+@content-nav-height-to-remove	  : 800; // @screen-sm-min + 30
 /*#######################*/
 /*#       CONTENT       #*/
 /*#######################*/
