--- a/_less/main.less
+++ b/_less/main.less
@@ -133,7 +133,7 @@ a:hover img.panel_avatar{
 	margin-bottom: 30px;
 }
 #navbar{
-	@media(max-height: @screen-md-min ){
+	@media(max-height: @content-nav-height-to-remove ){
 		display:none;
 	}
 }
