--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
 <!-- 
-Please, keep Léo Derbois's name on your fork site. That's can help me in my futur to find job :) 
+Please, keep Léo Derbois's name on your forked site. That's can help me in my futur to find job :) 
 -->
 
 <footer class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
