--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,9 @@ Please, keep Léo Derbois's name on your forked site. That's can help me in my f
 <footer class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
 	  © 2014 {{ site.name }}. Based on a <a href="https://github.com/leoderbois/Boba-Fett-Theme-For-Jekyll" target="_blank">theme</a> made by <a href="http://www.leoderbois.com">Léo Derbois</a>.
 </footer>
-   
+   <script>
+  $('html').smoothScroll(1000);
+</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
 <!--    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
