--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,8 @@
 
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
- 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <script src="{{ "/js/jquery.smoothscroll.js" | prepend: site.baseurl }}"></script>
 <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
