Update README + SmoothScroll

--- a/_less/bobafett.less
+++ b/_less/bobafett.less
@@ -23,6 +23,7 @@
 
 @panel-link-color                 : @boba-gold;
 @panel-link-color-hover           : @boba-green;
+@panel-nav-color-hover			  : transparent;
 
 /* --> background */
 @panel-filter-and-background-color: black;
@@ -33,11 +34,11 @@
 @panel-name-size                  : 32px;
 @panel-summary-size               : 24px;
 @panel-socialicon-size            : 40px;
-@panel-nav-text-size              : 35px;
+@panel-nav-text-size              : 30px;
 @panel-nav-text-size-hover        : @panel-nav-text-size;
 @panel-nav-text-marginbtm-size    : 8px;
 @panel-avatar-size                : 180px;
-@content-nav-height-to-remove	  : 800; // @screen-sm-min + 30
+@content-nav-height-to-remove	  : 760px; // @screen-sm-min + 30
 /*#######################*/
 /*#       CONTENT       #*/
 /*#######################*/
