--- a/_less/main.less
+++ b/_less/main.less
@@ -8,7 +8,7 @@ html {
 	height: 100%;
 	width: 100%;
 
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 body {
 	background-color: @panel-filter-and-background-color;
@@ -16,7 +16,7 @@ body {
 	height: 100%;
 	width: 100%;
 	overflow: auto;
-	position: relative;
+	/*position: relative;*/
 
 }
 body a{
@@ -116,21 +116,24 @@ a:hover img.panel_avatar{
 }
 .panel-social{
 	padding: 0px;
+	margin: 0px;
 	width: 100%;
 	text-align: center;
 	font-size: @panel-socialicon-size;
-
 }
 .panel-social li {
 	display: inline-block;
-	margin: 2.5px;
+	margin: 0px;
 	list-style: none;
 }
 .panel-summary{
 	text-align: center;
 	font-size: @panel-summary-size;
 	color :@panel-summary-color;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
+	@media(max-width: @screen-sm-min){
+		margin-bottom: 20px;
+	}
 }
 #navbar{
 	@media(max-height: @content-nav-height-to-remove ){
@@ -138,7 +141,7 @@ a:hover img.panel_avatar{
 	}
 }
 #navbar ul{
-	margin-top: 20px;
+	margin-top: 0px;
 	text-align: center;
 	padding:0 !important;
 
@@ -164,6 +167,14 @@ a:hover img.panel_avatar{
 	color: yellow;
 	background-color: green;
 } 
+
+.nav>li>a{
+	padding: 0px;
+}
+.nav>li>a:hover{
+	padding: 0px;
+	background-color: @panel-nav-color-hover;
+}
 /*#######################*/
 /*#       CONTENT       #*/
 /*#######################*/
