--- a/_includes/content/1-header.html
+++ b/_includes/content/1-header.html
@@ -1,3 +1,3 @@
-<div  id="content" data-spy="scroll" data-target="#navbar" data-offset="0" class="col-md-9 col-lg-9 col-sm-9 col-xs-12" >
+<div  id="content" class="col-md-9 col-lg-9 col-sm-9 col-xs-12">
 
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-quote " ><i class="fa fa-quote-left"></i> <span>{{ site.quote }} </span><i class="fa fa-quote-right"></i></div>
