--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,46 @@ Please, keep Léo Derbois's name on your forked site. That's can help me in my f
 <footer class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
 	  © 2014 {{ site.name }}. Based on a <a href="https://github.com/leoderbois/Boba-Fett-Theme-For-Jekyll" target="_blank">theme</a> made by <a href="http://www.leoderbois.com">Léo Derbois</a>.
 </footer>
-   <script>
-  $('html').smoothScroll(1000);
+
+<!-- JQuery -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js" charset="utf-8"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+<!-- animate scroll -->
+<script type="text/javascript">
+	$("#navbar ul li a[href^='#']").on('click', function(e) {
+
+   // prevent default anchor click behavior
+   e.preventDefault();
+
+   // store hash
+   var hash = this.hash;
+
+   // animate
+   $('html, body').animate({
+       scrollTop: $(this.hash).offset().top
+     }, 300, function(){
+
+       // when done, add hash to url
+       // (default click behaviour)
+       window.location.hash = hash;
+     });
+
+});
 </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-<!--    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
+ 
+<!--<script type="text/javascript">$('#content').scrollspy({ target: '#navbar' })</script>-->
+<!-- Google Analytics -->
+{% if site.googleAnalyticsID %}
+<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{site.googleAnalyticsID}}', 'auto');
+      ga('send', 'pageview');
+
+</script>
+<!-- Google Analytics -->   
+{% endif %}
