--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -18,13 +18,13 @@
       {% if site.facebook %}<li><a href="https://www.facebook.com/{{site.facebook}}" target="_blank"><i class="fa fa-facebook-square"></i></a></li>{% endif %}
     </ul>
     <div class="panel-summary">{{ site.summary }}</div>
-    <nav id="navbar" class="nav hidden-xs" role="navigation">
-      <ul>
-        {% if site.categories.experiences %}<li ><a href="#experiences">Experiences</a></li>{% endif %}
-        {% if site.categories.projects %}<li><a href="#projects"> Projects</a></li>{% endif %}
-        {% if site.categories.skills or site.skills %}<li><a href="#skills">Skills</a></li>{% endif %}
-        {% if site.categories.educations %}<li><a href="#educations">Education</a></li>{% endif %}
-        {% if site.categories.hobbies or site.hobbies %}<li><a href="#hobbies">Hobbies</a></li>{% endif %}
+    <nav id="navbar" class="hidden-xs" role="navigation">
+      <ul class="nav">
+        {% if site.categories.experiences %}<li ><a class="scrollTo" href="#experiences">Experiences</a></li>{% endif %}
+        {% if site.categories.projects %}<li><a class="scrollTo" href="#projects"> Projects</a></li>{% endif %}
+        {% if site.categories.skills or site.skills %}<li><a class="scrollTo" href="#skills">Skills</a></li>{% endif %}
+        {% if site.categories.educations %}<li><a class="scrollTo" href="#educations">Education</a></li>{% endif %}
+        {% if site.categories.hobbies or site.hobbies %}<li><a class="scrollTo" href="#hobbies">Hobbies</a></li>{% endif %}
         <li><a href="#informations" >Informations</a></li>
       </ul>
     </nav>
