--- a/_layouts/bobafett.html
+++ b/_layouts/bobafett.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   {% include head.html %}
 
-    <body  data-spy="scroll" data-target="#navbar">
+    <body>
       {% if site.enable_ribbon %}
         {% include ribbon.html %}
       {% endif %}
