--- a/_layouts/bobafett.html
+++ b/_layouts/bobafett.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-    <body>
+    <body  data-spy="scroll" data-target="#navbar" data-offset="200">
       {% if site.enable_ribbon %}
         {% include ribbon.html %}
       {% endif %}
