U : improve  scroll spy

--- a/_less/main.less
+++ b/_less/main.less
@@ -186,8 +186,8 @@ a:hover img.panel_avatar{
 #content a:hover{
 	color : @content-link-color-hover;
 }
-#content section{
-	min-height: 300px;
+ section{
+	
 }
 #content img{
 	margin-left: auto;
@@ -215,6 +215,9 @@ a:hover img.panel_avatar{
 		font-style : italic;
 
 
+}
+.content-posts {
+	min-height: 200px;
 }
 .content-quote span{
 	color: @content-quote-color;
