--- a/_includes/content/6-hobbies.html
+++ b/_includes/content/6-hobbies.html
@@ -1,5 +1,5 @@
-<section >
- <h2 id="hobbies" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ><i class="fa fa-coffee"></i> Hobbies</h2>
+<section id="hobbies"  class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+ <h2  class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ><i class="fa fa-coffee"></i> Hobbies</h2>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-posts 
 content-list">
 
