--- a/_includes/content/7-informations.html
+++ b/_includes/content/7-informations.html
@@ -1,5 +1,5 @@
-  <section  >
-  <h2 id="informations" class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-info"></i> Informations</h2>
+  <section  lass="col-lg-12 col-md-12 col-sm-12 col-xs-12"  >
+  <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-info"></i> Informations</h2>
 
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-posts  
 content-list">
@@ -49,4 +49,6 @@ content-list">
     {% endif %}
     </div>
   </div>
+
   </section>
+   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="informations" ></div>
